Added a filter to get products by category
