# storage/api-docs/api-docs.json
@@ -281,6 +281,59 @@
                 }
             }
         },
+        "/api/categories/{id}/products": {
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Show category products information",
+                "operationId": "67c24d3c30d5750888d791c996bd64de",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "Dairy"
+                                        },
+                                        "description": {
+                                            "type": "string",
+                                            "example": "This category is all about dairy."
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "example": "2023-02-23T00:09:16.000000Z"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "example": "2023-02-23T12:33:45.000000Z"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/products": {
             "get": {
                 "tags": [
